# unused-import-linter-py

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  CONTRIBUTING.md  CROSS_FILE_PLAN.md  README.md  pyproject.toml  requirements-dev.txt  tox.ini  unused_import_linter.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
import_analyzer/: _ast_helpers.py  _autofix.py  _cross_file.py  _data.py  _detection.py  _format.py  _main.py
remove_unused_imports/: __init__.py  __main__.py  _ast_helpers.py  _autofix.py  _cross_file.py  _data.py  _detection.py  _format.py  _graph.py  _main.py  _resolution.py
tests/: aliased_imports_test.py  autofix_test.py  cli_test.py  cross_file_test.py  detection_test.py  file_operations_test.py  format_test.py  graph_test.py  resolution_test.py  scope_analysis_test.py  shadowed_imports_test.py  special_imports_test.py  type_annotations_test.py  type_comments_test.py
