[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unused-import-linter"
version = "0.1.0"
description = "A Python linter that detects and autofixes unused imports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
unused-import-linter = "unused_import_linter:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "coverage[toml]>=7.0",
    "covdefaults>=2.3",
]

[tool.setuptools]
py-modules = ["unused_import_linter"]

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests"]
