[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remove-unused-imports"
version = "0.1.0"
description = "A Python linter that detects and autofixes unused imports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
remove-unused-imports = "remove_unused_imports:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "coverage[toml]>=7.0",
    "covdefaults>=2.3",
]

[tool.setuptools]
packages = ["remove_unused_imports"]

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_calls = true
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
    "redundant-expr",
    "possibly-undefined",
]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["var-annotated", "has-type"]
disallow_untyped_defs = false

[tool.isort]
profile = "black"
py_version = 310
force_single_line = true
